--- a/docs/notebooks/tutorials/omnigenity.ipynb
+++ b/docs/notebooks/tutorials/omnigenity.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "id": "0974e779",
    "metadata": {
     "pycharm": {
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "id": "9a54753b",
    "metadata": {
     "pycharm": {
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "id": "ee57db1b",
    "metadata": {
     "pycharm": {
@@ -81,7 +81,24 @@
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DESC version 0.10.4+237.gcf081a04c.dirty,using JAX backend, jax version=0.4.11, jaxlib version=0.4.11, dtype=float64\n",
+      "Using device: CPU, with 10.89 GB available memory\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/dudt/anaconda3/envs/desc/lib/python3.10/site-packages/jaxtyping/__init__.py:221: UserWarning: jaxtyping version >=0.2.23 should be used with Equinox version >=0.11.1\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
@@ -125,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "id": "8413ed5a",
    "metadata": {
     "tags": []
@@ -160,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "id": "45bdc94a",
    "metadata": {
     "tags": []
@@ -172,13 +189,13 @@
      "text": [
       "Building objective: force\n",
       "Precomputing transforms\n",
-      "Timer: Precomputing transforms = 251 ms\n",
-      "Timer: Objective build = 683 ms\n",
-      "Timer: Linear constraint projection build = 2.82 sec\n",
+      "Timer: Precomputing transforms = 1.68 sec\n",
+      "Timer: Objective build = 4.58 sec\n",
+      "Timer: Linear constraint projection build = 9.20 sec\n",
       "Compiling objective function and derivatives: ['force']\n",
-      "Timer: Objective compilation time = 3.12 sec\n",
-      "Timer: Jacobian compilation time = 6.51 sec\n",
-      "Timer: Total compilation time = 9.64 sec\n",
+      "Timer: Objective compilation time = 3.05 sec\n",
+      "Timer: Jacobian compilation time = 6.49 sec\n",
+      "Timer: Total compilation time = 9.55 sec\n",
       "Number of parameters: 120\n",
       "Number of objectives: 850\n",
       "Starting optimization\n",
@@ -197,8 +214,8 @@
       "         Iterations: 5\n",
       "         Function evaluations: 6\n",
       "         Jacobian evaluations: 6\n",
-      "Timer: Solution time = 6.87 sec\n",
-      "Timer: Avg time per step = 1.14 sec\n",
+      "Timer: Solution time = 6.42 sec\n",
+      "Timer: Avg time per step = 1.07 sec\n",
       "Start of solver\n",
       "Total (sum of squares):  1.043e-01, \n",
       "Maximum absolute Force error:  4.672e+04 (N)\n",
@@ -244,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "id": "e2b0c8b5",
    "metadata": {
     "tags": []
@@ -257,7 +274,7 @@
        " <AxesSubplot: title={'center': '$|\\\\mathbf{B}|~(T)$'}, xlabel='$\\\\zeta_{Boozer}$', ylabel='$\\\\theta_{Boozer}$'>)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -316,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "id": "06899e38",
    "metadata": {
     "tags": []
@@ -349,17 +366,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "id": "2147920d-3714-47ef-b3e4-a50f5b53da21",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fe5591bcb50>"
+       "<matplotlib.legend.Legend at 0x7f5d74195750>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -377,9 +394,9 @@
    "source": [
     "# plot initial target well |B|\n",
     "grid_well = LinearGrid(rho=[0.0], M=50)\n",
-    "data_initial = field.compute(\"|B|_omni\", grid=grid_well)\n",
+    "data_initial = field.compute(\"|B|\", grid=grid_well)\n",
     "fig, ax = plt.subplots(1, 1, figsize=(6, 6))\n",
-    "ax.plot(data_initial[\"eta\"], data_initial[\"|B|_omni\"], c=\"b\", lw=2)\n",
+    "ax.plot(data_initial[\"eta\"], data_initial[\"|B|\"], c=\"b\", lw=2)\n",
     "ax.scatter(\n",
     "    [0, np.pi / 4, np.pi / 2],\n",
     "    field.B_lm[0 : field.M_B] - field.B_lm[field.M_B :],\n",
@@ -414,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "id": "41007a61",
    "metadata": {
     "tags": []
@@ -473,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "id": "043ea32a",
    "metadata": {
     "tags": []
@@ -518,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "id": "2a6e7802",
    "metadata": {
     "tags": []
@@ -531,28 +548,28 @@
       "Building objective: major radius\n",
       "Building objective: aspect ratio\n",
       "Precomputing transforms\n",
-      "Timer: Precomputing transforms = 76.5 ms\n",
+      "Timer: Precomputing transforms = 72.9 ms\n",
       "Building objective: omnigenity\n",
       "Precomputing transforms\n",
-      "Timer: Precomputing transforms = 208 ms\n",
+      "Timer: Precomputing transforms = 458 ms\n",
       "Building objective: omnigenity\n",
       "Precomputing transforms\n",
-      "Timer: Precomputing transforms = 153 ms\n",
-      "Timer: Objective build = 534 ms\n",
+      "Timer: Precomputing transforms = 139 ms\n",
+      "Timer: Objective build = 835 ms\n",
       "Building objective: current density\n",
       "Precomputing transforms\n",
-      "Timer: Precomputing transforms = 235 ms\n",
-      "Timer: Objective build = 598 ms\n",
-      "Timer: Linear constraint projection build = 2.49 sec\n",
-      "Timer: Linear constraint projection build = 999 ms\n",
+      "Timer: Precomputing transforms = 329 ms\n",
+      "Timer: Objective build = 768 ms\n",
+      "Timer: Linear constraint projection build = 5.41 sec\n",
+      "Timer: Linear constraint projection build = 1.09 sec\n",
       "Compiling objective function and derivatives: ['major radius', 'aspect ratio', 'omnigenity', 'omnigenity']\n",
-      "Timer: Objective compilation time = 5.30 sec\n",
-      "Timer: Jacobian compilation time = 14.1 sec\n",
-      "Timer: Total compilation time = 19.4 sec\n",
+      "Timer: Objective compilation time = 6.51 sec\n",
+      "Timer: Jacobian compilation time = 16.2 sec\n",
+      "Timer: Total compilation time = 22.7 sec\n",
       "Compiling objective function and derivatives: ['current density']\n",
-      "Timer: Objective compilation time = 2.56 sec\n",
-      "Timer: Jacobian compilation time = 6.19 sec\n",
-      "Timer: Total compilation time = 8.76 sec\n",
+      "Timer: Objective compilation time = 3.23 sec\n",
+      "Timer: Jacobian compilation time = 7.13 sec\n",
+      "Timer: Total compilation time = 10.3 sec\n",
       "Number of parameters: 211\n",
       "Number of objectives: 258\n",
       "Number of equality constraints: 1275\n",
@@ -668,8 +685,8 @@
       "         Iterations: 100\n",
       "         Function evaluations: 176\n",
       "         Jacobian evaluations: 100\n",
-      "Timer: Solution time = 2.45 min\n",
-      "Timer: Avg time per step = 1.46 sec\n",
+      "Timer: Solution time = 2.29 min\n",
+      "Timer: Avg time per step = 1.36 sec\n",
       "Start of solver\n",
       "Total (sum of squares):  3.256e+01, \n",
       "GenericObjective value:  9.999e-01 (m)\n",
@@ -749,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "id": "89a8472d",
    "metadata": {},
    "outputs": [
@@ -759,13 +776,13 @@
      "text": [
       "Building objective: force\n",
       "Precomputing transforms\n",
-      "Timer: Precomputing transforms = 235 ms\n",
-      "Timer: Objective build = 563 ms\n",
+      "Timer: Precomputing transforms = 224 ms\n",
+      "Timer: Objective build = 545 ms\n",
       "Timer: Linear constraint projection build = 2.47 sec\n",
       "Compiling objective function and derivatives: ['force']\n",
-      "Timer: Objective compilation time = 2.98 sec\n",
-      "Timer: Jacobian compilation time = 7.26 sec\n",
-      "Timer: Total compilation time = 10.2 sec\n",
+      "Timer: Objective compilation time = 2.18 sec\n",
+      "Timer: Jacobian compilation time = 6.03 sec\n",
+      "Timer: Total compilation time = 8.21 sec\n",
       "Number of parameters: 120\n",
       "Number of objectives: 850\n",
       "Starting optimization\n",
@@ -782,8 +799,8 @@
       "         Iterations: 3\n",
       "         Function evaluations: 4\n",
       "         Jacobian evaluations: 4\n",
-      "Timer: Solution time = 4.32 sec\n",
-      "Timer: Avg time per step = 1.08 sec\n",
+      "Timer: Solution time = 3.60 sec\n",
+      "Timer: Avg time per step = 901 ms\n",
       "Start of solver\n",
       "Total (sum of squares):  2.032e-05, \n",
       "Maximum absolute Force error:  1.187e+03 (N)\n",
@@ -830,7 +847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "id": "c16c69e4",
    "metadata": {
     "tags": []
@@ -843,7 +860,7 @@
        " <AxesSubplot: title={'center': '$|\\\\mathbf{B}|~(T)$'}, xlabel='$\\\\zeta_{Boozer}$', ylabel='$\\\\theta_{Boozer}$'>)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -884,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 14,
    "id": "7b7bbbf5",
    "metadata": {
     "tags": []
@@ -897,7 +914,7 @@
        " <AxesSubplot: title={'center': '$|\\\\mathbf{B}|~(T)$'}, xlabel='$\\\\zeta_{Boozer}$', ylabel='$\\\\theta_{Boozer}$'>)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -939,7 +956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 15,
    "id": "f00b143f",
    "metadata": {
     "tags": []
@@ -952,7 +969,7 @@
        " <AxesSubplot: xlabel='$R ~(\\\\mathrm{m})$', ylabel='$Z ~(\\\\mathrm{m})$'>)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -989,17 +1006,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 16,
    "id": "a96e80c6-2344-46ff-a37f-766e9c87d862",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fe5013af3d0>"
+       "<matplotlib.legend.Legend at 0x7f5b93151300>"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1016,10 +1033,10 @@
    ],
    "source": [
     "# plot final target well |B|\n",
-    "data_optimal = field.compute(\"|B|_omni\", grid=grid_well)\n",
+    "data_optimal = field.compute(\"|B|\", grid=grid_well)\n",
     "fig, ax = plt.subplots(1, 1, figsize=(6, 6))\n",
-    "ax.plot(data_initial[\"eta\"], data_initial[\"|B|_omni\"], c=\"b\", lw=2, label=\"Initial\")\n",
-    "ax.plot(data_optimal[\"eta\"], data_optimal[\"|B|_omni\"], c=\"r\", lw=2, label=\"Optimized\")\n",
+    "ax.plot(data_initial[\"eta\"], data_initial[\"|B|\"], c=\"b\", lw=2, label=\"Initial\")\n",
+    "ax.plot(data_optimal[\"eta\"], data_optimal[\"|B|\"], c=\"r\", lw=2, label=\"Optimized\")\n",
     "ax.scatter(\n",
     "    [0, np.pi / 4, np.pi / 2],\n",
     "    field.B_lm[0 : field.M_B] - field.B_lm[field.M_B :],\n",
