--- a/docs/notebooks/zernike_eval.ipynb
+++ b/docs/notebooks/zernike_eval.ipynb
@@ -93,8 +93,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "DESC version 0.10.4+75.g680c7e14.dirty,using JAX backend, jax version=0.4.14, jaxlib version=0.4.14, dtype=float64\n",
-      "Using device: CPU, with 11.96 GB available memory\n"
+      "DESC version 0.10.4+123.g1cd83e9f,using JAX backend, jax version=0.4.14, jaxlib version=0.4.14, dtype=float64\n",
+      "Using device: CPU, with 8.92 GB available memory\n"
      ]
     }
    ],
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -151,13 +151,13 @@
      "output_type": "stream",
      "text": [
       "zernike_radial, 0th derivative\n",
-      "1.07 ms ± 610 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n",
+      "2.4 ms ± 1.34 ms per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n",
       "zernike_radial, 1st derivative\n",
-      "1.57 ms ± 7.89 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n",
+      "3.74 ms ± 41.6 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n",
       "zernike_radial, 2nd derivative\n",
-      "1.28 ms ± 7.58 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n",
+      "3.04 ms ± 18.6 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n",
       "zernike_radial, 3rd derivative\n",
-      "1.28 ms ± 10.7 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
+      "2.94 ms ± 11.3 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
      ]
     }
    ],
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -186,25 +186,25 @@
      "output_type": "stream",
      "text": [
       "zernike_radial_poly, 0th derivative\n",
-      "10.5 ms ± 98.1 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n",
+      "26.5 ms ± 1.11 ms per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
       "zernike_radial_poly, 1st derivative\n",
-      "10.4 ms ± 104 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
+      "26.4 ms ± 971 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
       "zernike_radial_poly, 2nd derivative\n",
-      "10.3 ms ± 38.4 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
+      "26.3 ms ± 1.61 ms per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
       "zernike_radial_poly, 3rd derivative\n",
-      "10.3 ms ± 62.8 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+      "28.5 ms ± 2 ms per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
      ]
     }
    ],
    "source": [
     "print(\"zernike_radial_poly, 0th derivative\")\n",
-    "%timeit -n 1000 _ = zernike_radial_poly(r[:,np.newaxis], basis.modes[:,0], basis.modes[:,1], dr=0, exact=False)\n",
+    "%timeit -n 100 _ = zernike_radial_poly(r[:,np.newaxis], basis.modes[:,0], basis.modes[:,1], dr=0, exact=False)\n",
     "print(\"zernike_radial_poly, 1st derivative\")\n",
-    "%timeit -n 1000 _ = zernike_radial_poly(r[:,np.newaxis], basis.modes[:,0], basis.modes[:,1], dr=1, exact=False)\n",
+    "%timeit -n 100 _ = zernike_radial_poly(r[:,np.newaxis], basis.modes[:,0], basis.modes[:,1], dr=1, exact=False)\n",
     "print(\"zernike_radial_poly, 2nd derivative\")\n",
-    "%timeit -n 1000 _ = zernike_radial_poly(r[:,np.newaxis], basis.modes[:,0], basis.modes[:,1], dr=2, exact=False)\n",
+    "%timeit -n 100 _ = zernike_radial_poly(r[:,np.newaxis], basis.modes[:,0], basis.modes[:,1], dr=2, exact=False)\n",
     "print(\"zernike_radial_poly, 3rd derivative\")\n",
-    "%timeit -n 1000 _ = zernike_radial_poly(r[:,np.newaxis], basis.modes[:,0], basis.modes[:,1], dr=3, exact=False)"
+    "%timeit -n 100 _ = zernike_radial_poly(r[:,np.newaxis], basis.modes[:,0], basis.modes[:,1], dr=3, exact=False)"
    ]
   },
   {
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -249,17 +249,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 5.45 s, sys: 0 ns, total: 5.45 s\n",
-      "Wall time: 5.45 s\n",
+      "CPU times: user 9.55 s, sys: 5.15 ms, total: 9.56 s\n",
+      "Wall time: 9.65 s\n",
       "zernike_radial_exact, 1st derivative\n",
-      "CPU times: user 5.52 s, sys: 0 ns, total: 5.52 s\n",
-      "Wall time: 5.52 s\n",
+      "CPU times: user 9.38 s, sys: 9.25 ms, total: 9.39 s\n",
+      "Wall time: 9.41 s\n",
       "zernike_radial_exact, 2nd derivative\n",
-      "CPU times: user 5.42 s, sys: 0 ns, total: 5.42 s\n",
-      "Wall time: 5.42 s\n",
+      "CPU times: user 9.31 s, sys: 875 µs, total: 9.31 s\n",
+      "Wall time: 9.31 s\n",
       "zernike_radial_exact, 3rd derivative\n",
-      "CPU times: user 5.72 s, sys: 0 ns, total: 5.72 s\n",
-      "Wall time: 5.72 s\n"
+      "CPU times: user 9.42 s, sys: 518 µs, total: 9.42 s\n",
+      "Wall time: 9.44 s\n"
      ]
     }
    ],
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -632,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -702,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 15,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -772,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 16,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -842,7 +842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 17,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -927,7 +927,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
