Remove more references to ObjectiveFunction verbose arg

--- a/docs/notebooks/tutorials/basic_optimization.ipynb
+++ b/docs/notebooks/tutorials/basic_optimization.ipynb
@@ -483,9 +483,7 @@
     ")\n",
     "plot_grid(grid_vol, figsize=(8, 8))\n",
     "\n",
-    "objective_fT = ObjectiveFunction(\n",
-    "    QuasisymmetryTripleProduct(eq=eq_qs_T, grid=grid_vol), verbose=0\n",
-    ")"
+    "objective_fT = ObjectiveFunction(QuasisymmetryTripleProduct(eq=eq_qs_T, grid=grid_vol))"
    ]
   },
   {
@@ -789,8 +787,7 @@
     ")\n",
     "# two-term objective\n",
     "objective_fC = ObjectiveFunction(\n",
-    "    QuasisymmetryTwoTerm(eq=eq_qs_C, grid=grid_rho1, helicity=(1, eq_init.NFP)),\n",
-    "    verbose=0,\n",
+    "    QuasisymmetryTwoTerm(eq=eq_qs_C, grid=grid_rho1, helicity=(1, eq_init.NFP))\n",
     ")"
    ]
   },
