--- a/docs/notebooks/tutorials/poincare_boundary_condition.ipynb
+++ b/docs/notebooks/tutorials/poincare_boundary_condition.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,15 +36,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "DESC version 0.10.4+196.g2f60ba45.dirty,using JAX backend, jax version=0.4.14, jaxlib version=0.4.14, dtype=float64\n",
-      "Using device: CPU, with 11.14 GB available memory\n"
+      "DESC version 0.10.4+208.gab390066,using JAX backend, jax version=0.4.14, jaxlib version=0.4.14, dtype=float64\n",
+      "Using device: CPU, with 11.15 GB available memory\n"
      ]
     }
    ],
