Use new API to set sheet current resolution

--- a/docs/notebooks/tutorials/free_boundary_equilibrium.ipynb
+++ b/docs/notebooks/tutorials/free_boundary_equilibrium.ipynb
@@ -289,8 +289,7 @@
    },
    "outputs": [],
    "source": [
-    "eq2.surface = FourierCurrentPotentialField.from_surface(eq2.surface)\n",
-    "eq2.surface.change_Phi_resolution(M=10)"
+    "eq2.surface = FourierCurrentPotentialField.from_surface(eq2.surface, M_Phi=10)"
    ]
   },
   {
