Fix section heading levels in notebooks

--- a/docs/notebooks/tutorials/free_boundary_equilibrium.ipynb
+++ b/docs/notebooks/tutorials/free_boundary_equilibrium.ipynb
@@ -128,7 +128,9 @@
     "    -6.588300858364606e04,\n",
     "    -3.560589388468855e05,\n",
     "]\n",
-    "ext_field = SplineMagneticField.from_mgrid(r\"../../../tests/inputs/mgrid_solovev.nc\", extcur=extcur)"
+    "ext_field = SplineMagneticField.from_mgrid(\n",
+    "    r\"../../../tests/inputs/mgrid_solovev.nc\", extcur=extcur\n",
+    ")"
    ]
   },
   {
@@ -479,7 +481,9 @@
    "outputs": [],
    "source": [
     "extcur = [4700.0, 1000.0]\n",
-    "ext_field = SplineMagneticField.from_mgrid(\"../../../tests/inputs/mgrid_test.nc\", extcur=extcur)"
+    "ext_field = SplineMagneticField.from_mgrid(\n",
+    "    \"../../../tests/inputs/mgrid_test.nc\", extcur=extcur\n",
+    ")"
    ]
   },
   {
