Update argument name

--- a/docs/notebooks/tutorials/free_boundary_equilibrium.ipynb
+++ b/docs/notebooks/tutorials/free_boundary_equilibrium.ipynb
@@ -302,7 +302,7 @@
    "outputs": [],
    "source": [
     "# For a standard free boundary solve, we set field_fixed=True. For single stage optimization, we would set to False\n",
-    "objective = ObjectiveFunction(BoundaryError(eq=eq2, ext_field=ext_field, field_fixed=True))"
+    "objective = ObjectiveFunction(BoundaryError(eq=eq2, field=ext_field, field_fixed=True))"
    ]
   },
   {
@@ -690,7 +690,7 @@
    },
    "outputs": [],
    "source": [
-    "objective = ObjectiveFunction(VacuumBoundaryError(eq=eq2, ext_field=ext_field, field_fixed=True))"
+    "objective = ObjectiveFunction(VacuumBoundaryError(eq=eq2, field=ext_field, field_fixed=True))"
    ]
   },
   {
